--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,24 +18,12 @@ jobs:
 
     - name: Build multi-platform images
       run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t tmp:latest .
-
-    - name: List images
-      run: |
-        docker images
-
-  scan:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@main
+        docker buildx build --platform linux/amd64,linux/arm64 -t onepluskiller/tmp:latest .
 
     - name: Set up Trivy and Scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: tmp:latest
+        image-ref: onepluskiller/tmp:latest
         format: 'json'
         output: 'trivy-results.json'
         exit-code: '1'
@@ -43,30 +31,13 @@ jobs:
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN'
 
-  
-  fix:
-    needs: scan
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@main
-
     - name: Fix vulnerabilities with COPA
       uses: project-copacetic/copa-action@main
       with:
-        image: tmp:latest
+        image: onepluskiller/tmp:latest
         image-report: 'trivy-results.json'
         patched-tag: fixed
         output: fixed-image.tar
-
-  push:
-    needs: fix
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@main
 
     - name: Load fixed image
       run: docker load -i fixed-image.tar
@@ -79,5 +50,5 @@ jobs:
 
     - name: Push fixed image
       run: |
-        docker tag tmp:fixed tmp:latest
-        docker push tmp:latest
+        docker tag onepluskiller/tmp:fixed onepluskiller/tmp:latest
+        docker push onepluskiller/tmp:latest
