--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,9 +16,15 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@master
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@master
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build multi-platform images
       run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t onepluskiller/tmp:latest .
+        docker buildx build --push --platform linux/amd64,linux/arm64 -t onepluskiller/tmp:latest .
 
     - name: Set up Trivy and Scan
       uses: aquasecurity/trivy-action@master
@@ -41,12 +47,6 @@ jobs:
 
     - name: Load fixed image
       run: docker load -i fixed-image.tar
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@master
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Push fixed image
       run: |
