--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-${{ github.sha }}
 
     steps:
     - name: Checkout code
@@ -24,12 +24,12 @@ jobs:
 
     - name: Build multi-platform images
       run: |
-        docker buildx build --push --platform linux/amd64,linux/arm64 -t onepluskiller/tmp:latest .
+        docker buildx build --push --platform linux/amd64,linux/arm64 -t onepluskiller/tmp:${{ github.sha }} .
 
     - name: Set up Trivy and Scan
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: onepluskiller/tmp:latest
+        image-ref: onepluskiller/tmp:${{ github.sha }}
         format: 'json'
         output: 'trivy-results.json'
         exit-code: '1'
@@ -40,7 +40,7 @@ jobs:
     - name: Fix vulnerabilities with COPA
       uses: project-copacetic/copa-action@main
       with:
-        image: onepluskiller/tmp:latest
+        image: onepluskiller/tmp:${{ github.sha }}
         image-report: 'trivy-results.json'
         patched-tag: fixed
         output: fixed-image.tar
@@ -50,5 +50,5 @@ jobs:
 
     - name: Push fixed image
       run: |
-        docker tag onepluskiller/tmp:fixed onepluskiller/tmp:latest
-        docker push onepluskiller/tmp:latest
+        docker tag onepluskiller/tmp:fixed onepluskiller/tmp:${{ github.sha }}
+        docker push onepluskiller/tmp:${{ github.sha }}
