--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,6 +34,7 @@ jobs:
         output: 'trivy-results.json'
         exit-code: '1'
         ignore-unfixed: true
+        scanners: 'vuln'
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH,MEDIUM,LOW,UNKNOWN'
 
@@ -50,5 +51,5 @@ jobs:
 
     - name: Push fixed image
       run: |
-        docker tag onepluskiller/tmp:fixed onepluskiller/tmp:${{ github.sha }}
-        docker push onepluskiller/tmp:${{ github.sha }}
+        docker tag onepluskiller/tmp:fixed onepluskiller/tmp
+        docker push onepluskiller/tmp
